# agent-q

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  server.json
.github/workflows/: ci.yml  npm-publish.yml
docs/: IMPLEMENTATION_STATUS.md  POLICY_SCHEMA.md  PROVISIONING.md  SECURITY_MODEL.md  STATE_MODEL.md
firmware/: README.md  source.env
firmware/src/stackchan-cores3/: README.md  SPEC.md  source.env
firmware/src/stackchan-cores3/components/signing_crypto/: CMakeLists.txt  sign.h
firmware/src/stopwatch-esp32s3/: README.md  SPEC.md  source.env
firmware/src/stopwatch-esp32s3/components/signing_crypto/: CMakeLists.txt
firmware/src/stopwatch-esp32s3/overlay/main/: CMakeLists.txt  main.cpp
firmware/src/stopwatch-esp32s3/overlay/main/assets/dial/: dial_assets_generated.h
firmware/src/stopwatch-esp32s3/overlay/main/assets/watch/: watch_assets_generated.h
firmware/src/stopwatch-esp32s3/overlay/main/hal/: hal.h  hal_button.cpp  hal_pmic.cpp
firmware/src/stopwatch-esp32s3/overlay/main/runtime/: app.cpp  app.h  clock_scene.cpp  clock_scene.h  credential_preparation_state.cpp  credential_preparation_state.h  device_reset.cpp  device_reset.h  display_geometry.h  local_auth.cpp  local_auth.h  local_auth_entry_state.cpp  local_auth_entry_state.h  local_auth_setup_state.cpp  local_auth_setup_state.h  local_auth_worker.cpp  local_auth_worker.h  local_transport_pairing.cpp  local_transport_pairing.h  local_transport_pairing_scene.cpp  local_transport_pairing_scene.h  payload_digest.cpp  payload_digest.h  payload_transfer_request.cpp  payload_transfer_request.h  payload_transfer_state.cpp  payload_transfer_state.h  pin_policy.h  protocol_input_encoding.cpp  protocol_input_encoding.h  protocol_runtime.cpp  protocol_runtime.h  rotary_dial_scene.cpp  rotary_dial_scene.h  secure_random.cpp  secure_random.h  sensitive_memory.cpp  sensitive_memory.h  session_state.cpp  session_state.h  (+16 more)
firmware/templates/: README.md  target-README.template.md  target-SPEC.template.md  target-required-tests.template.md
firmware/tools/common/: configure_local_transport_sdkconfig.py  generate_sui_transaction_fixtures.mjs  test_common_hardware_neutrality.sh  test_common_target_neutrality.sh  test_device_response.sh  test_encrypted_keystore.sh  test_encrypted_keystore_nvs.sh  test_local_transport_frame.sh  test_local_transport_identity_store.sh  test_local_transport_noise.sh  test_local_transport_nvs_identity_storage.sh  test_local_transport_optical_payload.sh  test_local_transport_pairing_session.sh  test_local_transport_peer_store.sh  test_payload_delivery_primitives.sh  test_policy_canonical.sh  test_policy_document.sh  test_policy_v0.sh  test_protocol_transport_loss.sh  test_sign_route.sh  test_sui_offline_policy_facts.sh  test_sui_policy_token_flow_matrix.sh  test_sui_sign_transaction_adapter.sh  test_sui_token_flow_facts.sh  test_sui_transaction_facts.sh  test_transport_exclusivity.sh
firmware/tools/stackchan-cores3/: build.sh  fetch.sh  generate_bip39_wordlist.py  prepare.sh  test_approval_history.sh  test_bip39_vectors.sh  test_call_method_validation.sh  test_connect_approval.sh  test_connect_review_response_flow.sh  test_connect_settings.sh  test_device_activity_projection.sh  test_device_contract_manifest.sh  test_human_approval_settings.sh  test_identification_display.sh  test_local_auth.sh  test_local_auth_worker.sh  test_local_pin_auth.sh  test_local_reset.sh  test_local_settings_reset_ui_flow.sh  test_local_settings_touch_entry.sh  test_method_approval_flow.sh  test_method_runtime.sh  test_method_signing_request_flow.sh  test_method_signing_review_view_model.sh  test_modal_layout_static.sh  test_payload_delivery_store.sh  test_persistent_material.sh  test_policy_proposal_parser.sh  test_policy_store.sh  test_policy_update_flow.sh  test_policy_update_marker.sh  test_prepare_sync.sh  test_protocol_pin_approval.sh  test_provisioning_flow.sh  test_provisioning_runtime_state.sh  test_provisioning_state_store.sh  test_provisioning_ui_flow.sh  test_request_backed_local_pin_context.sh  test_request_line.sh  test_request_signature_activation_boundary.sh  (+75 more)
firmware/tools/stopwatch-esp32s3/: build.sh  fetch.sh  generate_dial_assets.mjs  generate_watch_assets.mjs  prepare.sh  test_credential_preparation_state.sh  test_local_auth.sh  test_local_auth_entry_state.sh  test_local_auth_setup_state.sh  test_local_transport_structure.sh  test_payload_transfer_request.sh  test_payload_transfer_state.sh  test_physical_wake_policy.sh  test_prepare_config.sh  test_protocol_runtime_credential_flow.sh  test_protocol_runtime_session_cleanup.sh  test_runtime_projection_loop.sh  test_session_state.sh  test_state_projection.sh  test_stopwatch_keystore.sh  test_sui_zklogin_credential_store.sh  test_sui_zklogin_proposal_state.sh  test_sui_zklogin_signing_service.sh  test_usb_transport_credential_flow.sh  test_usb_transport_session_cleanup.sh  test_watch_scene_structure.sh  with-idf.sh
products/firmware/: README.md  source.env
products/firmware/src/stackchan-cores3/components/signing_crypto/: CMakeLists.txt
products/gateway/: README.md  package-lock.json  package.json  tsconfig.json
products/gateway/src/: config.ts  core.ts  mcp.ts  protocol.ts  public-error.ts  safe-text.ts  usb.ts
products/gateway/test/: admin.test.mjs  config.test.mjs  core.test.mjs  error-codes.test.mjs  hardware-mcp-smoke.test.mjs  mcp.test.mjs  protocol.test.mjs  safe-text.test.mjs  usb.test.mjs
specs/: PROTOCOL.md  sign-route-vectors.tsv  sui-sign-transaction-policy-contract.tsv
tools/: generate_sui_policy_contract.mjs  usb-display-test.py
tools/firmware/common/: generate_sui_transaction_fixtures.mjs  test_policy_canonical.sh  test_policy_v0.sh  test_sui_transaction_facts.sh
tools/firmware/stackchan-cores3/: build.sh  fetch.sh  generate_bip39_wordlist.py  prepare.sh  test_approval_history.sh  test_bip39_vectors.sh  test_call_method_validation.sh  test_connect_approval.sh  test_connect_settings.sh  test_identification_display.sh  test_local_auth.sh  test_local_auth_worker.sh  test_local_pin_auth.sh  (+19 more)
(+901 files in other folders)
