set(MY_INCS
    "."
)

idf_component_register(
    SRCS
        "main.cpp"
        "runtime/app.cpp"
        "runtime/credential_preparation_state.cpp"
        "runtime/local_auth.cpp"
        "runtime/local_auth_entry_state.cpp"
        "runtime/local_auth_setup_state.cpp"
        "runtime/payload_digest.cpp"
        "runtime/payload_transfer_request.cpp"
        "runtime/payload_transfer_state.cpp"
        "runtime/protocol_input_encoding.cpp"
        "runtime/rotary_dial_scene.cpp"
        "runtime/sensitive_memory.cpp"
        "runtime/secure_random.cpp"
        "runtime/session_state.cpp"
        "runtime/state_projection.cpp"
        "runtime/sui_zklogin_credential_clear.cpp"
        "runtime/sui_public_material.cpp"
        "runtime/sui_zklogin_credential_store.cpp"
        "runtime/sui_zklogin_proposal_state.cpp"
        "runtime/usb_transport.cpp"
        "firmware_common/protocol/device_contract.cpp"
        "firmware_common/protocol/device_response.cpp"
        "firmware_common/protocol/base64.cpp"
        "firmware_common/protocol/request_id.cpp"
        "firmware_common/protocol/request_line.cpp"
        "firmware_common/sui/zklogin_credential_outcome.cpp"
        "firmware_common/sui/zklogin_credential_payload.cpp"
        "firmware_common/sui/zklogin_proof_record.cpp"
        "firmware_common/transport/payload_delivery_admission.cpp"
        "firmware_common/transport/payload_delivery_primitives.cpp"
        "firmware_common/transport/usb_link_state.cpp"
        "firmware_common/transport/usb_session_grace.cpp"
        "apps/common/audio/audio.cpp"
        "apps/common/key_manager/key_manager.cpp"
        "hal/hal.cpp"
        "hal/hal_audio.cpp"
        "hal/hal_button.cpp"
        "hal/hal_display.cpp"
        "hal/hal_fs.cpp"
        "hal/hal_imu.cpp"
        "hal/hal_ioe.cpp"
        "hal/hal_pmic.cpp"
        "hal/hal_rtc.cpp"
        "hal/drivers/cst820/cst820.cpp"
        "hal/drivers/rx8130/rx8130.cpp"
        "hal/utils/button/Button_Class.cpp"
        "hal/utils/settings/settings.cc"
        "hal/utils/wear_levelling/wear_levelling.c"
    INCLUDE_DIRS
        ${MY_INCS}
        "firmware_common"
    EMBED_FILES
        "assets/sfx/boot_sfx.bin"
        "assets/dial/1_baseplate.rgb565a8.bin"
        "assets/dial/2_dial_frames.idx8.deflate.bin"
)
