set(MY_INCS
    "."
)

idf_component_register(
    SRCS
        "main.cpp"
        "runtime/app.cpp"
        "runtime/clock_scene.cpp"
        "runtime/credential_preparation_state.cpp"
        "runtime/local_auth.cpp"
        "runtime/local_auth_entry_state.cpp"
        "runtime/local_auth_setup_state.cpp"
        "runtime/local_auth_worker.cpp"
        "runtime/local_transport_pairing.cpp"
        "runtime/local_transport_pairing_scene.cpp"
        "runtime/protocol_input_encoding.cpp"
        "runtime/rotary_dial_scene.cpp"
        "runtime/sensitive_memory.cpp"
        "runtime/secure_random.cpp"
        "firmware_common/protocol/session_state.cpp"
        "runtime/state_projection.cpp"
        "runtime/device_reset.cpp"
        "runtime/sui_public_material.cpp"
        "runtime/sui_zklogin_credential_store.cpp"
        "runtime/sui_zklogin_proposal_state.cpp"
        "runtime/sui_zklogin_signing_service.cpp"
        "runtime/stopwatch_keystore.cpp"
        "runtime/protocol_runtime.cpp"
        "firmware_common/keystore/encrypted_keystore.cpp"
        "firmware_common/keystore/encrypted_keystore_nvs.cpp"
        "firmware_common/protocol/device_contract.cpp"
        "firmware_common/protocol/device_response.cpp"
        "firmware_common/protocol/approval_history.cpp"
        "firmware_common/protocol/approval_history_json_writer.cpp"
        "firmware_common/protocol/base64.cpp"
        "firmware_common/protocol/request_id.cpp"
        "firmware_common/protocol/request_line.cpp"
        "firmware_common/protocol/sign_request_identity.cpp"
        "firmware_common/protocol/signing_mode.cpp"
        "firmware_common/protocol/signing_response_store.cpp"
        "firmware_common/protocol/active_session_request_guard.cpp"
        "firmware_common/protocol/approval_history_handler.cpp"
        "firmware_common/protocol/device_handlers.cpp"
        "firmware_common/protocol/json_response.cpp"
        "firmware_common/protocol/operation_dispatch.cpp"
        "firmware_common/protocol/operation_manifest.cpp"
        "firmware_common/protocol/operation_type.cpp"
        "firmware_common/protocol/request_envelope.cpp"
        "firmware_common/protocol/request_line_handler.cpp"
        "firmware_common/protocol/session_read_handlers.cpp"
        "firmware_common/protocol/sui_zklogin_credential_handlers.cpp"
        "firmware_common/policy/policy_handlers.cpp"
        "firmware_common/signing/policy_signing_execution_result.cpp"
        "firmware_common/signing/protocol_transport_loss.cpp"
        "firmware_common/signing/signing_retry_delivery.cpp"
        "firmware_common/signing/sign_personal_message_user_ingress.cpp"
        "firmware_common/signing/sign_personal_message_user_validation.cpp"
        "firmware_common/signing/sign_transaction_user_ingress.cpp"
        "firmware_common/signing/sign_transaction_user_validation.cpp"
        "firmware_common/signing/sign_transaction_policy_runtime.cpp"
        "firmware_common/signing/signing_preflight.cpp"
        "firmware_common/signing/signing_retry_response.cpp"
        "firmware_common/signing/signing_handlers.cpp"
        "firmware_common/signing/signing_outcome_writer.cpp"
        "firmware_common/signing/user_signing_critical_section.cpp"
        "firmware_common/signing/user_signing_flow.cpp"
        "firmware_common/policy/document.cpp"
        "firmware_common/policy/evaluator.cpp"
        "firmware_common/policy/policy_json_writer.cpp"
        "firmware_common/policy/policy_proposal_parser.cpp"
        "firmware_common/policy/policy_store.cpp"
        "firmware_common/policy/policy_update_flow.cpp"
        "firmware_common/policy/policy_update_marker.cpp"
        "firmware_common/sui/bcs_reader.cpp"
        "firmware_common/sui/account_binding.cpp"
        "firmware_common/sui/offline_policy_facts.cpp"
        "firmware_common/sui/personal_message_intent.cpp"
        "firmware_common/sui/sign_transaction_adapter.cpp"
        "firmware_common/sui/signing_preparation.cpp"
        "firmware_common/sui/signing_payload.cpp"
        "firmware_common/sui/transaction_facts.cpp"
        "firmware_common/sui/zklogin_credential_outcome.cpp"
        "firmware_common/sui/zklogin_credential_payload.cpp"
        "firmware_common/sui/zklogin_proof_payload.cpp"
        "firmware_common/sui/zklogin_proof_record.cpp"
        "firmware_common/sui/zklogin_signature.cpp"
        "firmware_common/transport/connect_approval.cpp"
        "firmware_common/transport/connect_review_response_flow.cpp"
        "firmware_common/transport/local_transport_crypto.cpp"
        "firmware_common/transport/local_transport_frame.cpp"
        "firmware_common/transport/local_transport_identity_store.cpp"
        "firmware_common/transport/local_transport_mbedtls_crypto.cpp"
        "firmware_common/transport/local_transport_nimble_peripheral.cpp"
        "firmware_common/transport/local_transport_nimble_pairing_session.cpp"
        "firmware_common/transport/local_transport_noise.cpp"
        "firmware_common/transport/local_transport_optical_payload.cpp"
        "firmware_common/transport/local_transport_pairing_session.cpp"
        "firmware_common/transport/payload_delivery_admission.cpp"
        "firmware_common/transport/payload_delivery_primitives.cpp"
        "firmware_common/transport/payload_delivery_resolution.cpp"
        "firmware_common/transport/payload_delivery_store.cpp"
        "firmware_common/transport/connect_handler.cpp"
        "firmware_common/transport/disconnect_handler.cpp"
        "firmware_common/transport/payload_transfer_handlers.cpp"
        "firmware_common/transport/retained_response_handlers.cpp"
        "firmware_common/transport/usb_link_state.cpp"
        "firmware_common/transport/usb_session_grace.cpp"
        "apps/common/audio/audio.cpp"
        "apps/common/key_manager/key_manager.cpp"
        "hal/hal.cpp"
        "hal/hal_audio.cpp"
        "hal/hal_button.cpp"
        "hal/hal_display.cpp"
        "hal/hal_fs.cpp"
        "hal/hal_imu.cpp"
        "hal/hal_ioe.cpp"
        "hal/hal_pmic.cpp"
        "hal/hal_rtc.cpp"
        "hal/drivers/cst820/cst820.cpp"
        "hal/drivers/rx8130/rx8130.cpp"
        "hal/utils/button/Button_Class.cpp"
        "hal/utils/settings/settings.cc"
        "hal/utils/wear_levelling/wear_levelling.c"
    INCLUDE_DIRS
        ${MY_INCS}
        "firmware_common"
    EMBED_FILES
        "assets/sfx/boot_sfx.bin"
        "assets/dial/1_baseplate.rgb565a8.bin"
        "assets/dial/2_dial_frames.idx8.deflate.bin"
        "assets/watch/clock_1_face.i8.bin"
)

target_compile_definitions(${COMPONENT_LIB} PRIVATE
    AGENT_Q_APPROVAL_HISTORY_CAPACITY=8
)
